--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "backend_server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +18,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.0",
     "morgan": "^1.10.0",
-    "nodemailer": "^6.9.8"
+    "mysql2": "^3.9.0",
+    "nodemailer": "^6.9.8",
+    "pg": "^8.11.3"
   }
 }
